force-app/main/default/objects/Job_Order__c/Job_Order__c.object-meta.xml
<CustomObject>
    <label>Job Order</label>
    <nameField>
        <displayFormat>Order #{00000}</displayFormat>
        <label>Job Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>