force-app/main/default/objects/Job_Order__c/fields/Additional_PDF_Proof_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Additional_PDF_Proof_Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional PDF Proof - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>