force-app/main/default/objects/Job_Order__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>eRepublic</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>Navigator</fullName>
            </value>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
                <isActive>false</isActive>
                <label>PCIO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>