force-app/main/default/objects/Job_Order__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>