force-app/main/default/objects/Job_Order__c/fields/Delivery_Contract__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>