force-app/main/default/objects/Job_Order__c/fields/Headers_Web_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Headers_Web_Sizes__c</fullName>
    <label>Headers &amp; Web Sizes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1440 x 720 (header background)</fullName>
            </value>
            <value>
                <fullName>770x513 (Home Page Tile)</fullName>
            </value>
            <value>
                <fullName>970x250 (Banner Web Ad)</fullName>
            </value>
            <value>
                <fullName>640x480 (Banner Web Ad)</fullName>
            </value>
            <value>
                <fullName>300x250 (Banner Web Ad)</fullName>
            </value>
            <value>
                <fullName>320x100 (Mobile Ad)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>