force-app/main/default/objects/Job_Order__c/fields/Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Color__c</fullName>
    <label>Highlight Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>