force-app/main/default/objects/Job_Order__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <type>TextArea</type>
</CustomField>