force-app/main/default/objects/Job_Order__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Client Web Ads</fullName>
            </value>
            <value>
                <fullName>Comm Dev - Other</fullName>
            </value>
            <value>
                <fullName>Content Studio Advertorials</fullName>
            </value>
            <value>
                <fullName>Content Studio Case Study</fullName>
            </value>
            <value>
                <fullName>Content Studio Event Package</fullName>
            </value>
            <value>
                <fullName>Content Studio Handbook</fullName>
            </value>
            <value>
                <fullName>Content Studio Infographics</fullName>
            </value>
            <value>
                <fullName>Content Studio Issue Brief</fullName>
            </value>
            <value>
                <fullName>Content Studio Mag Placement</fullName>
            </value>
            <value>
                <fullName>Content Studio Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Content Studio Print Distribution</fullName>
            </value>
            <value>
                <fullName>Content Studio Publishable Report</fullName>
            </value>
            <value>
                <fullName>Content Studio Q&amp;A</fullName>
            </value>
            <value>
                <fullName>Content Studio Slides for Video</fullName>
            </value>
            <value>
                <fullName>Content Studio TLP</fullName>
            </value>
            <value>
                <fullName>Content Studio White Papers</fullName>
            </value>
            <value>
                <fullName>Corporate Event Signs</fullName>
            </value>
            <value>
                <fullName>Corporate Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Custom Webinar Headers - PPT and CERT</fullName>
            </value>
            <value>
                <fullName>Event Headers</fullName>
            </value>
            <value>
                <fullName>Event Materials</fullName>
            </value>
            <value>
                <fullName>Event Promo Cards</fullName>
            </value>
            <value>
                <fullName>Flipbook Upgrade</fullName>
            </value>
            <value>
                <fullName>GOVERNING Miscellaneous</fullName>
            </value>
            <value>
                <fullName>GOVERNING Web Quote Art</fullName>
            </value>
            <value>
                <fullName>Industry Insider Market Facts Charts</fullName>
            </value>
            <value>
                <fullName>Innovation Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Magazine Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>