force-app/main/default/objects/Job_Order__c/fields/Job_Type_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>