force-app/main/default/objects/Job_Order__c/fields/Print_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Print_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Distribution</label>
    <type>Checkbox</type>
</CustomField>