force-app/main/default/objects/Job_Order__c/fields/Printed_Insert__c.field-meta.xml
<CustomField>
    <fullName>Printed_Insert__c</fullName>
    <label>Printed Insert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tip In</fullName>
            </value>
            <value>
                <fullName>Polybag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>