force-app/main/default/objects/Job_Order__c/fields/Project_File_s__c.field-meta.xml
<CustomField>
    <fullName>Project_File_s__c</fullName>
    <label>Project File(s)</label>
    <type>Url</type>
</CustomField>