force-app/main/default/objects/Job_Order__c/fields/Requested_First_Proof_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_First_Proof_Date__c</fullName>
    <label>Requested First Proof Date</label>
    <type>Date</type>
</CustomField>