force-app/main/default/objects/Job_Order__c/fields/Requested_Press_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Press_Date__c</fullName>
    <label>Requested Press Date</label>
    <type>Date</type>
</CustomField>