force-app/main/default/objects/Job_Order__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <formula
  >&quot;Please upload all necessary attachments to Files at the top of this Job Order&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirements</label>
    <type>Text</type>
</CustomField>