force-app/main/default/objects/Job_Order__c/fields/Run_as_Mag_Ad__c.field-meta.xml
<CustomField>
    <fullName>Run_as_Mag_Ad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run as Mag Ad</label>
    <type>Checkbox</type>
</CustomField>