force-app/main/default/objects/Job_Order__c/fields/Run_as_Mag_Ad_DisplayFormula__c.field-meta.xml
<CustomField>
    <fullName>Run_as_Mag_Ad_DisplayFormula__c</fullName>
    <formula
  >IF(Run_as_Mag_Ad__c = TRUE, &quot;Yes&quot;,&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run as Mag Ad</label>
    <type>Text</type>
</CustomField>