force-app/main/default/objects/Job_Order__c/fields/Save_New_File__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File__c</fullName>
    <label>Save New File (URL)</label>
    <type>Url</type>
</CustomField>