force-app/main/default/objects/Job_Order__c/fields/Save_New_File_Display_Link__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File_Display_Link__c</fullName>
    <formula
  >IF(ISBLANK(Save_New_File__c),&quot; &quot;,HYPERLINK(Save_New_File__c , &quot;View File&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save New File</label>
    <type>Text</type>
</CustomField>