force-app/main/default/objects/Job_Order__c/fields/Save_New_File_T_Drive__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File_T_Drive__c</fullName>
    <label>Save New File (T-Drive)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>