force-app/main/default/objects/Job_Order__c/fields/Submission_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Submission_Reminder__c</fullName>
    <formula
  >&quot;Make sure all files have been attached to this Job Order before clicking Save&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Reminder</label>
    <type>Text</type>
</CustomField>