force-app/main/default/objects/Job_Order__c/fields/Update_Existing_File_Display_Link__c.field-meta.xml
<CustomField>
    <fullName>Update_Existing_File_Display_Link__c</fullName>
    <formula
  >IF(ISBLANK(Update_Existing_File__c),&quot; &quot;,HYPERLINK(Update_Existing_File__c , &quot;View File&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Existing File</label>
    <type>Text</type>
</CustomField>