force-app/main/default/objects/Job_Order__c/fields/Update_Existing_File_T_Drive__c.field-meta.xml
<CustomField>
    <fullName>Update_Existing_File_T_Drive__c</fullName>
    <label>Update Existing File (T-Drive)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>