force-app/main/default/objects/Job_Order__c/fields/Viewable_PDF_Proof_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Viewable_PDF_Proof_Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viewable PDF Proof - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>