force-app/main/default/objects/Job_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Requested_by__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>