force-app/main/default/objects/Job_Order__c/listViews/All_Drafts.listView-meta.xml
<ListView>
    <fullName>All_Drafts</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Requested_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All - Drafts</label>
</ListView>