force-app/main/default/objects/Job_Order__c/listViews/Community_Development_Job_Orders.listView-meta.xml
<ListView>
    <fullName>Community_Development_Job_Orders</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Community Development</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New Record,Draft,Submitted,In Progress</value>
    </filters>
    <label>Community Development Job Orders</label>
</ListView>