force-app/main/default/objects/Job_Order__c/listViews/Content_Studio_In_Progress.listView-meta.xml
<ListView>
    <fullName>Content_Studio_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Content Studio</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Content Studio - In Progress</label>
</ListView>