force-app/main/default/objects/Job_Order__c/listViews/Digital_ALL.listView-meta.xml
<ListView>
    <fullName>Digital_ALL</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Digital</value>
    </filters>
    <label>Digital - ALL</label>
</ListView>